--- a/SCTrans/sctrans.ui
+++ b/SCTrans/sctrans.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>684</width>
-    <height>338</height>
+    <width>633</width>
+    <height>243</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -50,17 +50,17 @@
             <widget class="QComboBox" name="startSC_input_cb">
              <item>
               <property name="text">
-               <string>X, Y, Z</string>
+               <string>X, Y, Z (Прямоугольные коорд.)</string>
               </property>
              </item>
              <item>
               <property name="text">
-               <string>B, L, H</string>
+               <string>B, L, H (Геодезические коорд.)</string>
               </property>
              </item>
              <item>
               <property name="text">
-               <string>R, F, L</string>
+               <string>R, F, L (Сферические коорд.)</string>
               </property>
              </item>
             </widget>
@@ -73,6 +73,19 @@
                 <string>TextLabel</string>
                </property>
               </widget>
+             </item>
+             <item>
+              <spacer name="horizontalSpacer_3">
+               <property name="orientation">
+                <enum>Qt::Horizontal</enum>
+               </property>
+               <property name="sizeHint" stdset="0">
+                <size>
+                 <width>40</width>
+                 <height>20</height>
+                </size>
+               </property>
+              </spacer>
              </item>
              <item>
               <widget class="QLineEdit" name="startSC_le1"/>
@@ -89,6 +102,19 @@
               </widget>
              </item>
              <item>
+              <spacer name="horizontalSpacer_4">
+               <property name="orientation">
+                <enum>Qt::Horizontal</enum>
+               </property>
+               <property name="sizeHint" stdset="0">
+                <size>
+                 <width>40</width>
+                 <height>20</height>
+                </size>
+               </property>
+              </spacer>
+             </item>
+             <item>
               <widget class="QLineEdit" name="startSC_le2"/>
              </item>
             </layout>
@@ -101,6 +127,19 @@
                 <string>TextLabel</string>
                </property>
               </widget>
+             </item>
+             <item>
+              <spacer name="horizontalSpacer_5">
+               <property name="orientation">
+                <enum>Qt::Horizontal</enum>
+               </property>
+               <property name="sizeHint" stdset="0">
+                <size>
+                 <width>40</width>
+                 <height>20</height>
+                </size>
+               </property>
+              </spacer>
              </item>
              <item>
               <widget class="QLineEdit" name="startSC_le3"/>
@@ -244,17 +283,17 @@
             <widget class="QComboBox" name="endSC_input_cb">
              <item>
               <property name="text">
-               <string>X, Y, Z</string>
+               <string>X, Y, Z (Прямоугольные коорд.)</string>
               </property>
              </item>
              <item>
               <property name="text">
-               <string>B, L, H</string>
+               <string>B, L, H (Геодезические коорд.)</string>
               </property>
              </item>
              <item>
               <property name="text">
-               <string>R, F, L</string>
+               <string>R, F, L (Сферические коорд.)</string>
               </property>
              </item>
             </widget>
@@ -267,6 +306,19 @@
                 <string>TextLabel</string>
                </property>
               </widget>
+             </item>
+             <item>
+              <spacer name="horizontalSpacer_6">
+               <property name="orientation">
+                <enum>Qt::Horizontal</enum>
+               </property>
+               <property name="sizeHint" stdset="0">
+                <size>
+                 <width>40</width>
+                 <height>20</height>
+                </size>
+               </property>
+              </spacer>
              </item>
              <item>
               <widget class="QLineEdit" name="endSC_le1">
@@ -287,6 +339,19 @@
               </widget>
              </item>
              <item>
+              <spacer name="horizontalSpacer_7">
+               <property name="orientation">
+                <enum>Qt::Horizontal</enum>
+               </property>
+               <property name="sizeHint" stdset="0">
+                <size>
+                 <width>40</width>
+                 <height>20</height>
+                </size>
+               </property>
+              </spacer>
+             </item>
+             <item>
               <widget class="QLineEdit" name="endSC_le2">
                <property name="readOnly">
                 <bool>true</bool>
@@ -303,6 +368,19 @@
                 <string>TextLabel</string>
                </property>
               </widget>
+             </item>
+             <item>
+              <spacer name="horizontalSpacer_8">
+               <property name="orientation">
+                <enum>Qt::Horizontal</enum>
+               </property>
+               <property name="sizeHint" stdset="0">
+                <size>
+                 <width>40</width>
+                 <height>20</height>
+                </size>
+               </property>
+              </spacer>
              </item>
              <item>
               <widget class="QLineEdit" name="endSC_le3">
@@ -327,8 +405,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>684</width>
-     <height>31</height>
+     <width>633</width>
+     <height>21</height>
     </rect>
    </property>
   </widget>
